manifests/apps/iotpaas-reverse-proxy/base/deployment-config.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  labels:
    app: nginx-proxy
  name: nginx-proxy
spec:
  replicas: 1
  selector:
    app: nginx-proxy
    deploymentconfig: nginx-proxy
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: nginx-proxy
        deploymentconfig: nginx-proxy
    spec:
      containers:
      - env:
        - name: noop
          value: "1"
        image: quay.io/14west/openshift-nginx:latest
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 8081
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readiness
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-conf-volume
          subPath: nginx.conf
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: quay.registry
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx
        name: nginx-conf-volume
  test: false
  triggers:
  - type: ConfigChange
