manifests/apps/iotpaas-reverse-proxy/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
spec:
  ports:
  - name: tcp-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: nginx-proxy
    deploymentconfig: nginx-proxy
  sessionAffinity: None
  type: ClusterIP
