manifests/apps/iotpaas-reverse-proxy/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: app
spec:
  port:
    targetPort: tcp-8081
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
